--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="red">
+    <meta name="apple-mobile-web-app-title" content="Raflin">
+    <link rel="apple-touch-icon" href="/icon/Raflin-icon.png" sizes="96x96">
   </head>
   <body>
     <img src="images/raflin1.jpg" alt="homepage">
